day4/np-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: np-nginx
  namespace: np-test
  labels:
    app: nginx
spec:
  containers:
   - name: nginx
     image: nginx
