day4/taint-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taint-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
