day4/toleration-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toleration-pod
spec:
  tolerations:
  - key: "kubernetes.io/env"
    operator: "Equal"
    value: "prod"
    effect: "NoSchedule"
  - key: "kubernetes.io/zone"
    operator: "Exists"
    effect: "PreferNoSchedule"
  - key: "kubernetes.io/az"
    operator: "Exists"
    effect: "NoExecute"
    tolerationSeconds: 60
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
